[project]
name = "polyrails"
version = "0.1.0"
description = "The Polymarket CLOB V2 execution layer that works: non-custodial orders via the gasless deposit-wallet flow, with builder attribution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polymarket-client>=0.1.0b3",
    "py-clob-client-v2>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyrails"]
