[project]
name = "polyrails"
version = "0.1.0"
description = "The Polymarket CLOB V2 execution layer that works: non-custodial orders via the deposit-wallet flow, with builder attribution."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["polymarket", "prediction-markets", "clob", "trading", "builder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "polymarket-client>=0.1.0b16",
]

[project.urls]
Homepage = "https://github.com/datarhan/polyrails"
Repository = "https://github.com/datarhan/polyrails"
Changelog = "https://github.com/datarhan/polyrails/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyrails"]
